--- a/css/index.css
+++ b/css/index.css
@@ -14,11 +14,17 @@ menu, nav, output, ruby, section, summary,
 time, mark, audio, video {  
 margin: 0;  
 padding: 0;  
-border: 0;  
+/* border: 0;   */
 font-size: 100%;  
 font: inherit;  
 vertical-align: baseline;  
 }
+
+*{
+    box-sizing:border-box;
+    /* border:1px black solid; */
+}
+
 /*GENERAL STYLES*/
 html{
     font-size:62.5%;
@@ -133,4 +139,56 @@ button:hover{
 }
 .artist img{
     width:100%;
+}
+
+/* Mobile Display */
+@media(max-width:500px){
+    /* General Styles */
+    h1{
+        font-size:3.2rem;
+        font-weight:bold;
+    }
+    a{
+        font-size:2rem;
+    }
+
+    /* Header Styles */
+    nav{
+        width:60%;
+    }
+
+    /* Title Section Styles */
+    .title-container div{
+        width:100%;
+        height:38vh;
+        background-position:center;
+        background-size:190%;
+        opacity:80%;
+        margin-bottom:2%;
+    }
+    .title-container hr{
+        width:98%;
+        opacity:50%;
+        margin:3% auto;
+    }
+
+    /*Artists Section Styles */
+    .artists-container{
+        width:100%;
+        flex-direction:column;
+        margin-bottom:10%;
+    }
+    .artist{
+        width:80%;
+        margin:auto;
+    }
+    .artist img{
+        width:80%;
+        height:auto;
+        margin:7% auto 4%;
+    }
+    .artist .bio{
+        font-size:1.5rem;
+        margin-top:2%;
+    }
 }
